# CythonExtensionTemplate

./: .gitignore  README.md
scripts/: make.bat
src/cython/core/: mymodule.pyx  setup.py
src/cython/main/: CMakeLists.txt  main.pyx  setup.py
